--- a/user-management/user-management/src/main/resources/application.properties
+++ b/user-management/user-management/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pharmacymanagement59@gmail.com
-spring.mail.password=utjjucoewcrutywk
+spring.mail.username=pharmacymanagement132@gmail.com
+spring.mail.password=zfhlwozsewtmbert
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+logger.file = appLog.file
