--- a/order-management/order-management/src/main/resources/application.properties
+++ b/order-management/order-management/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 server.port = 8064
 spring.application.name = order-management
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/user_database
-spring.datasource.username=root
-spring.datasource.password=root
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=order_database
+spring.data.mongodb.format_sql=true
+spring.data.mongodb.show_sql=true
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pharmacymanagement132@gmail.com
+spring.mail.password=ewwapfpwntysavkt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
