--- a/supplier-management/supplier-management/src/main/resources/application.properties
+++ b/supplier-management/supplier-management/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+logger.file = appLog.file
