--- a/payment-gateway/src/main/resources/application.properties
+++ b/payment-gateway/src/main/resources/application.properties
@@ -1,17 +1,15 @@
-
-paytm.payment.sandbox.merchantId = BZkkhw60371708171655
-paytm.payment.sandbox.merchantKey = xYPZIs7b4vQxDLPY
-paytm.payment.sandbox.channelId = WEB
-paytm.payment.sandbox.industryTypeId = Retail
-paytm.payment.sandbox.website = WEBSTAGING
-paytm.payment.sandbox.paytmUrl = https://securegw-stage.paytm.in/order/process
-paytm.payment.sandbox.callbackUrl = http://localhost:8062/user-management
-
-paytm.payment.sandbox.details.MID = ${paytm.payment.sandbox.merchantId}
-paytm.payment.sandbox.details.CHANNEL_ID = ${paytm.payment.sandbox.channelId}
-paytm.payment.sandbox.details.INDUSTRY_TYPE_ID = ${paytm.payment.sandbox.industryTypeId}
-paytm.payment.sandbox.details.WEBSITE = ${paytm.payment.sandbox.website}
-paytm.payment.sandbox.details.CALLBACK_URL = ${paytm.payment.sandbox.callbackUrl}
+paytm.payment.sandbox.merchantId : BZkkhw60371708171655
+paytm.payment.sandbox.merchantKey : xYPZIs7b4vQxDLPY
+paytm.payment.sandbox.channelId : WEB
+paytm.payment.sandbox.industryTypeId : Retail
+paytm.payment.sandbox.website : WEBSTAGING
+paytm.payment.sandbox.paytmUrl : https://securegw-stage.paytm.in/order/process
+paytm.payment.sandbox.callbackUrl : http://localhost:8080/pgresponse
+paytm.payment.sandbox.details.MID : ${paytm.payment.sandbox.merchantId}
+paytm.payment.sandbox.details.CHANNEL_ID : ${paytm.payment.sandbox.channelId}
+paytm.payment.sandbox.details.INDUSTRY_TYPE_ID : ${paytm.payment.sandbox.industryTypeId}
+paytm.payment.sandbox.details.WEBSITE : ${paytm.payment.sandbox.website}
+paytm.payment.sandbox.details.CALLBACK_URL : ${paytm.payment.sandbox.callbackUrl}
 
 paytm.mobile = 9711785070
 paytm.email = raghavgupta312@gmail.com
