--- a/user-management/user-management/src/main/resources/application.properties
+++ b/user-management/user-management/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 server.port = 8062
 spring.application.name = user-management
 
@@ -10,6 +9,7 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
